Add keywords to composer

--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,9 @@
         "classmap": [
             "src/"
         ]
-    }
+    },
+    "keywords": [
+        "php",
+        "size-calculation"
+    ]
 }
