Rearrange directory structure
Can now new-up with: ChrisUllyott\FileSize instead of ChrisUllyott\FileSize\FileSize

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "autoload": {
         "psr-4": {
-            "ChrisUllyott\\FileSize\\": "src/"
+            "ChrisUllyott\\": "src/"
         }
     },
     "keywords": [
