--- a/composer.json
+++ b/composer.json
@@ -4,22 +4,20 @@
     "description": "Easily calculate file sizes and convert between units.",
     "homepage": "https://github.com/chrisullyott/php-filesize",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Chris Ullyott",
-            "email": "contact@chrisullyott.com",
-            "homepage": "http://www.chrisullyott.com"
-        }
-    ],
+    "authors": [{
+        "name": "Chris Ullyott",
+        "email": "contact@chrisullyott.com",
+        "homepage": "http://www.chrisullyott.com"
+    }],
     "support": {
         "issues": "https://github.com/chrisullyott/php-filesize/issues",
         "source": "https://github.com/chrisullyott/php-filesize"
     },
     "require": {
-        "php": ">=5.6.0"
+        "php": ">=7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5"
+        "phpunit/phpunit": "^7"
     },
     "autoload": {
         "psr-4": {
